--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -129,12 +129,12 @@ body {
   transition: background-color 300ms;
 }
 
-#app[data-theme="dark"] {
+#app[data-theme='dark'] {
   background-color: var(--color-base-black-eta);
   color: var(--color-base-white-alpha);
 }
 
-#app[data-theme="light"] {
+#app[data-theme='light'] {
   background-color: var(--color-base-white-alpha);
   color: var(--color-base-black-eta);
 }
@@ -183,7 +183,6 @@ button {
     max-width: 100%;
   }
 }
-
 
 /****************************************************************************************************************/
 /*********************************************** Home Page ******************************************************/
@@ -288,92 +287,77 @@ button {
   align-items: center;
   gap: 12px;
   cursor: pointer;
+
+  a {
+    box-sizing: border-box;
+    padding: 8px;
+    border-top-right-radius: 6px;
+    border-top-left-radius: 6px;
+    transition: all 300ms;
+  }
 }
 
-.couch-mint__theme-toggle-active {
-  font-weight: 700;
-  text-decoration: underline;
+#app[data-theme='light'] .couch-mint__header-link-container {
+  border-bottom: 2px solid var(--color-base-blue-primary);
+
+  a[data-current-page='self'] {
+    background-color: var(--color-base-blue-primary);
+    color: var(--color-base-white-alpha);
+  }
 }
 
-.couch-mint__header-theme-toggle {
-  display: flex;
+#app[data-theme='dark'] .couch-mint__header-link-container {
+  border-bottom: 2px solid var(--color-base-white-alpha);
+
+  a[data-current-page='self'] {
+    background-color: var(--color-base-white-alpha);
+    color: var(--color-base-blue-primary);
+  }
+}
+
+#theme-toggle {
+  display: inline-flex;
   flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: space-evenly;
   box-sizing: border-box;
   padding: 4px;
-  width: 144px;
-  height: 36px;
+  border-radius: 30px;
+  width: 116px;
+  transition: all 300ms;
+
+  span {
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    align-self: center;
+    width: 54px;
+    padding: 4px;
+    height: 100%;
+    border-radius: 34px;
+    transition: all 300ms;
+  }
 }
 
-#app[data-theme='light'] .couch-mint__header-theme-toggle {
-  background-color: var(--light-background-200);
-  border: 1.25px solid var(--light-option-100);
-  color: var(--light-background-100);
-  border-radius: 40px;
+#app[data-theme='dark'] {
+  #theme-toggle {
+    background-color: var(--color-base-white-alpha);
+    border: 2px solid var(--color-base-green-primary);
+
+    span[data-theme-tab='dark'] {
+      background-color: var(--color-base-green-primary);
+    }
+  }
 }
 
-#app[data-theme='dark'] .couch-mint__header-theme-toggle {
-  background-color: var(--light-background-200);
-  border: 1.25px solid var(--light-background-100);
-  color: var(--light-background-100);
-  border-radius: 40px;
-}
+#app[data-theme='light'] {
+  #theme-toggle {
+    background-color: var(--color-base-blue-primary);
+  }
 
-#app[data-theme='alt'] .couch-mint__header-theme-toggle {
-  background-color: var(--alt-option-100);
-  border: 1.25px solid var(--alt-background-200);
-  color: var(--alt-option-300);
-  border-radius: 40px;
-}
-
-.couch-mint__theme-button-container {
-  position: fixed;
-  bottom: 10px;
-  right: 16px;
-  isolation: isolate;
-  z-index: 0;
-}
-
-.couch-mint__theme-toggle-button {
-  position: relative;
-}
-
-.couch-mint__theme-selection-popover {
-  position: absolute;
-  box-sizing: border-box;
-  padding: 10px;
-  padding-right: 36px;
-  border-radius: 8px;
-  border: 1px solid var(--dark-option-200);
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  align-items: flex-start;
-  background-color: #fff;
-  bottom: 44px;
-  right: 90px;
-  box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.7);
-  z-index: 2;
-}
-
-.couch-mint__theme-option {
-  font-family: 'Newake';
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  line-height: 1.15;
-  vertical-align: middle;
-  font-size: 16px;
-  color: var(--light-option-300);
-}
-
-.couch-mint__theme-option:hover {
-  transform: scale(1.15);
-}
-
-.couch-mint__theme-option-active {
-  font-weight: 600;
-  color: var(--light-background-200);
+  span[data-theme-tab='light'] {
+    background-color: var(--color-base-green-primary);
+  }
 }
 
 /****************************************************************************************************************/
@@ -809,7 +793,7 @@ button {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    gap: 16px
+    gap: 16px;
   }
 }
 
@@ -818,7 +802,7 @@ button {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    gap: 16px
+    gap: 16px;
   }
 }
 
