--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -322,6 +322,8 @@ button {
   align-items: center;
   box-sizing: border-box;
   padding: 4px;
+  margin-left: 32px;
+  margin-bottom: 6px;
   border-radius: 30px;
   width: 116px;
   transition: all 300ms;
@@ -758,8 +760,7 @@ button {
     display: block;
     box-sizing: border-box;
     margin: 0;
-    padding: 10px 16px;
-    margin-top: 8px;
+    padding: 10px 0px;
   }
 
   p {
@@ -1015,107 +1016,38 @@ button {
 }
 
 /****************************************************************************************************************/
-/*********************************************** Article Search *************************************************/
+/*********************************************** Profile *************************************************/
 /****************************************************************************************************************/
 
-.couch-mint__article-search-container {
-  position: relative;
-  isolation: isolate;
-  z-index: 1;
-}
-
-.couch-mint__card-search-overlay {
-  position: absolute;
-  z-index: 2;
-  height: 500px;
-  width: 324px;
-  border-radius: 10px;
-  background-color: var(--color-base-gray-alpha);
-  display: flex;
-  flex-direction: column;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-.couch-mint__card-search-input {
-  border-radius: 4px;
-  height: 40px;
-  min-width: 216px;
-  box-sizing: border-box;
-  padding: 0px 16px;
-
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0.06em;
-  font-family: 'League Spartan';
-  color: #000;
-}
-
-.couch-mint__card-search-input::placeholder {
-  color: #868686;
-}
-
-.couch-mint__section-root-container {
+.couch-mint__bio-main-root {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  box-sizing: border-box;
+  padding-top: 2rem;
   width: 100%;
-  min-height: 100vh;
+}
 
-  .couch-mint__section-child-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow: hidden;
-    gap: 4px;
-    box-sizing: border-box;
+.couch-mint__bio-info-root {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 2rem;
+}
+
+.couch-mint__bio-image-root {
+  img {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
   }
 }
 
-.browse-node__root-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  gap: 16px;
-  border-bottom: 2px solid white;
-  min-height: 196px;
-  box-sizing: border-box;
-  padding-bottom: 16px;
-
-  > .browse-node__heading-anchor-tag {
-    font-size: 40px;
-    color: white;
-    margin-block-start: 16px;
-    margin-block-end: 8px;
-  }
-
-  > .browse-node__description {
-    font-size: 20px;
-  }
-
-  div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .browse-node__badge {
-    display: inline-flex;
-    box-sizing: border-box;
-    padding: 8px 16px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-width: 84px;
-    border-radius: 30px;
-    border: 2px solid var(--color-base-green-primary);
-    background-color: var(--color-base-green-primary);
-    margin-block: 0px;
-  }
+.couch-mint__bio-name {
+  font-family: 'Newake';
+  letter-spacing: 1.45px;
+  font-size: 3rem;
 }
