--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -916,7 +916,7 @@ button {
   }
 }
 
-#app[data-theme="dark"] {
+#app[data-theme='dark'] {
   .couch-mint__main-article-markdown-container blockquote {
     background-color: var(--color-base-black-alpha);
 
@@ -926,7 +926,7 @@ button {
   }
 }
 
-#app[data-theme="light"] {
+#app[data-theme='light'] {
   .couch-mint__main-article-markdown-container blockquote {
     background-color: #f8f8f8;
 
@@ -966,17 +966,19 @@ button {
   flex-direction: column;
   justify-content: flex-start;
   border-radius: 4px;
-  transition: background-color 300ms, border 300ms;
+  transition:
+    background-color 300ms,
+    border 300ms;
 }
 
-#app[data-theme="light"] {
+#app[data-theme='light'] {
   .summary__wrapping-container {
     background-color: #f8f8f8;
     border: 2px solid var(--color-base-black-eta);
   }
 }
 
-#app[data-theme="dark"] {
+#app[data-theme='dark'] {
   .summary__wrapping-container {
     background-color: var(--color-base-blue-primary);
     border: 2px solid #f8f8f8;
