feat(react): Migrates to react compiler

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -308,6 +308,18 @@ a {
   }
 }
 
+.pop-green {
+  color: var(--color-base-green-primary);
+}
+
+.pop-blue {
+  color: var(--color-base-blue-primary);
+}
+
+.pop-pink {
+  color: var(--color-base-synthwave-pink-primary);
+}
+
 /****************************************************************************************************************/
 /*********************************************** Links **********************************************************/
 /****************************************************************************************************************/
