chore: renames mint to swe.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -308,6 +308,18 @@ a {
   }
 }
 
+.pop-green {
+  color: var(--color-base-green-primary);
+}
+
+.pop-blue {
+  color: var(--color-base-blue-primary);
+}
+
+.pop-pink {
+  color: var(--color-base-synthwave-pink-primary);
+}
+
 /****************************************************************************************************************/
 /*********************************************** Links **********************************************************/
 /****************************************************************************************************************/
@@ -468,6 +480,11 @@ a {
   top: 84px;
   right: 10px;
   margin: 0;
+}
+
+.couch-mint__header-menu-icon {
+  fill: var(--color-base-blue-primary);
+  color: var(--color-base-blue-primary);
 }
 
 /****************************************************************************************************************/
